Rename application to "Mohaimen's Weather App" in README, HTML title, and Webpack configuration

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather App</title>
+  <title>Mohaimen's Weather App</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -12,7 +12,7 @@
     <div class="sidebar">
       <div class="logo">
         <i class="fas fa-cloud-sun"></i>
-        <h2>Weather App</h2>
+        <h2>Mohaimen's Weather App</h2>
       </div>
       <div class="search-box">
         <input type="text" id="city-search" placeholder="Search for a city...">
